blocks/profile.css
.profile {
    display: flex;
    align-items: center;
    margin-top: 40px;
    font-family: Inter, Arial, sans-serif;
}

.profile__avatar {
    margin: 0 30px 0 0;
    height: 120px;
    width: 120px;
    background-color: #000;
}

.profile__info {
    display: grid;
    grid-template-areas: 
        "name button"
        "title title";
    align-items: center;
}

.profile__name {
    color: #fff;
    font-size: 42px;
    line-height: 48px;
    font-weight: 500;
    margin: 0 0 7px;
    grid-area: name;
    text-overflow: ellipsis;
    overflow: hidden;
}

.profile__title {
    color: #fff;
    font-size: 18px;
    line-height: 22px;
    font-weight: 400;
    margin: 0;
    grid-area: title;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.profile__edit-button {
     background-color: transparent;
     cursor: pointer;
     height: 24px;
     width: 24px;
     border: #fff 1px solid;
     grid-area: button;
     align-self: center;
     margin: 0 0 0 18px;
     background-image: url(../images/pencil.svg);
     background-repeat: no-repeat;
     background-position: center;
}

.profile__edit-button:hover {
    opacity: 60%;
}

.profile__add-button {
    margin-left: auto;
    background-color: transparent;
    cursor: pointer;
    width: 150px;
    height: 50px;
    border: #fff 2px solid;
    border-radius: 2px;
    background-image: url(../images/plus.svg);
    background-repeat: no-repeat;
    background-position: center;
}

.profile__add-button:hover {
    opacity: 60%;
}

@media screen and (min-width: 320px) and (max-width: 799px) {
    .profile {
        display: flex;
        flex-direction: column;
        margin: 0 auto;
        justify-content: center;
        max-width: 282px;
    }

    .profile__avatar {
        margin: 42px 0 0 0;
    }

    .profile__info {
        margin: 30px 0 0 0;
    }

    .profile__name {
        font-size: 22px;
        line-height: 27px;
        margin: 0;
    }

    .profile__title {
        font-size: 14px;
        line-height: 17px;
        margin: 14px auto 0;
        text-align: center;
    }

    .profile__edit-button {
        display: flex;
        width: 18px;
        height: 18px;
        margin: 0 0 0 10px;
        padding: 0;
    }

    .profile__add-button {
        margin: 36px 0 0;
        width: 280px;
        padding: 0;
    }
}

